# primusdb

./: .gitignore  ADMIN.md  API_REFERENCE.md  ARCHITECTURE.md  BUILD.md  CHANGELOG.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  TROUBLESHOOTING.md  USER.md
crates/primusdb-ai/: Cargo.toml
crates/primusdb-ai/src/: lib.rs
crates/primusdb-api/: Cargo.toml
crates/primusdb-cluster/: Cargo.toml
crates/primusdb-consensus/: Cargo.toml
crates/primusdb-core/: Cargo.toml
crates/primusdb-core/src/: error.rs  lib.rs
crates/primusdb-crypto/: Cargo.toml
crates/primusdb-drivers/: Cargo.toml
crates/primusdb-drivers/src/: java_driver.rs  lib.rs  python.rs  ruby_driver.rs  rust_driver.rs
crates/primusdb-error/: Cargo.toml
crates/primusdb-error/src/: lib.rs
crates/primusdb-storage/: Cargo.toml
crates/primusdb-storage/src/: lib.rs
crates/primusdb-transaction/: Cargo.toml
data/columnar/: db  snap.0000000000000124
data/vector/: db  snap.00000000000000EE
drivers/java/: .project  README.md  pom.xml
drivers/java/src/main/java/com/primusdb/jdbc/: PrimusDBConnection.java  PrimusDBDatabaseMetaData.java  PrimusDBDriver.java  PrimusDBResultSet.java  PrimusDBStatement.java
drivers/node/: README.md  package-lock.json  package.json
drivers/node/src/: index.ts
drivers/node/test/: index.test.ts
drivers/python/: Cargo.toml  README.md  setup.py
drivers/python/primusdb/: __init__.py
drivers/python/src/: lib.rs
drivers/ruby/: LICENSE  README.md  primusdb.gemspec
drivers/ruby/lib/: primusdb.rb
drivers/rust/: Cargo.toml  README.md
drivers/rust/src/: lib.rs
scripts/: build-drivers.sh
src/: error.rs  lib.rs  main.rs
src/ai/: mod.rs  predictive.rs
src/api/: mod.rs
src/auth/: cluster_auth.rs  mod.rs
src/cache/: cache.rs  cluster.rs  compression.rs  consensus.rs  hashing.rs  manager.rs  mod.rs  search.rs
src/cli/: mod.rs
src/cluster/: mod.rs  sync.rs
src/cluster/sync/: consensus.rs  reconciliation.rs
src/consensus/: mod.rs
src/crypto/: file_encryption.rs  mod.rs
src/drivers/: mod.rs
src/protocol/: handlers.rs  journaling.rs  messaging.rs  mod.rs  recovery.rs  trust.rs
src/query/: executor.rs  mod.rs  parser.rs  planner.rs
src/storage/: columnar.rs  document.rs  keyvalue.rs  mod.rs  relational.rs  vector.rs
src/transaction/: mod.rs
tests/: integration_tests.rs
