[package]
name = "primusdb"
version = "1.0.0"
edition = "2021"
authors = ["Devahil Leivzieük <devahil@gmail.com>", "PrimusDB Team"]
description = "A hybrid database engine combining columnar, vector, document, and relational storage"
license = "GPL-3.0"
repository = "https://github.com/devahil/primusdb.git"

[workspace]
members = [
    "crates/primusdb-core",
    "crates/primusdb-storage",
    "crates/primusdb-crypto",
    "crates/primusdb-consensus",
    "crates/primusdb-transaction",
    "crates/primusdb-ai",
    "crates/primusdb-cluster",
    "crates/primusdb-drivers",
    "crates/primusdb-api",
    "crates/primusdb-error",
    "drivers/rust",
]

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
bytes = "1.0"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"

# Async and networking
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "compression-gzip", "compression-deflate", "trace"] }
hyper = "1.0"
tonic = "0.11"

# Crypto and security
aes-gcm = "0.10"
argon2 = "0.5"
sha2 = "0.10"
sha3 = "0.10"
blake3 = "1.5"

# Database and storage
sled = "0.34"

# Vector operations
ndarray = "0.15"
approx = "0.5"

# Compression
lz4 = "1.24"
zstd = "0.13"
crc32fast = "1.3"
regex = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
config = "0.14"

# CLI
clap = { version = "4.4", features = ["derive"] }

# HTTP client for client mode
reqwest = { version = "0.11", features = ["json"] }
urlencoding = "2.1"

# Metrics and monitoring
prometheus = "0.13"
num_cpus = "1.0"

# Cache dependencies
lru = "0.12"
bloom = "0.3"
siphasher = "1.0"

# Blockchain/Consensus
hex = "0.4"
hex-literal = "0.4"
secp256k1 = "0.28"

# Secure Protocol
ring = "0.17"

# AI/ML dependencies (lightweight)
# candle-core = "0.3"
# candle-nn = "0.3"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[[bin]]
name = "primusdb-server"
path = "src/bin/server.rs"

[[bin]]
name = "primusdb-cli"
path = "src/bin/cli.rs"