[package]
name = "primusdb-cluster"
version = "0.1.0"
edition = "2021"

[dependencies]
primusdb-core = { path = "../primusdb-core" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
num_cpus = "1.0"