[package]
name = "primusdb-consensus"
version = "0.1.0"
edition = "2021"

[dependencies]
primusdb-core = { path = "../primusdb-core" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
secp256k1 = "0.28"
hex = "0.4"