[package]
name = "primusdb-crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
primusdb-core = { path = "../primusdb-core" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ring = "0.17"
aes-gcm = "0.10"
argon2 = "0.5"
sha2 = "0.10"
sha3 = "0.10"
blake3 = "1.5"
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }