[package]
name = "primusdb-drivers"
version = "0.1.0"
edition = "2021"

[dependencies]
primusdb-core = { path = "../primusdb-core" }
primusdb-error = { path = "../primusdb-error" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
url = "2.0"

[features]
python = ["pyo3"]
java = ["jni"]
ruby = ["rutie"]

[dependencies.pyo3]
version = "0.21"
features = ["extension-module"]
optional = true

[dependencies.jni]
version = "0.21"
optional = true

[dependencies.rutie]
version = "0.8"
optional = true