[package]
name = "primusdb-rust-driver"
version = "0.1.0"
edition = "2021"
authors = ["PrimusDB Team"]
description = "Native Rust driver for PrimusDB"
license = "MIT"
repository = "https://github.com/devahil/primusdb.git"

[dependencies]
primusdb = { path = "../../" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.8"